Name of project IN index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>P2P File Sharing</h2>
+        <h2>Easy File Share By CWV</h2>
         <input type="file" id="fileInput">
         <button onclick="shareFile()">Generate Link</button>
         <p id="downloadLink"></p>
