Update index.html v3

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         
         <!-- Status Indicator -->
         <div id="status" class="status"></div>
+        <div id="connection-status" class="status hidden">
+            Sender: <span id="sender-status">Disconnected</span> | 
+            Receiver: <span id="receiver-status">Disconnected</span>
+        </div>
 
         <!-- Sender Section -->
         <div id="sender-section" class="section">
