--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FileShare - Peer-to-Peer Sharing</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Easy File Share</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>FileShare</h1>
+        <h1>Easy File Share</h1>
         
         <!-- Status Indicator -->
         <div id="status" class="status"></div>
-        <div id="connection-status" class="status hidden">
-            Sender: <span id="sender-status">Disconnected</span> | 
-            Receiver: <span id="receiver-status">Disconnected</span>
-        </div>
 
         <!-- Sender Section -->
         <div id="sender-section" class="section">
@@ -33,10 +29,6 @@
                     <input type="text" id="share-link" readonly>
                     <button id="copy-btn" class="btn">Copy</button>
                 </div>
-                <div id="progress-container" class="hidden">
-                    <progress id="upload-progress" max="100" value="0"></progress>
-                    <span id="progress-text">0%</span>
-                </div>
             </div>
         </div>
 
@@ -47,10 +39,6 @@
                 <p>File: <span id="receive-file-name"></span></p>
                 <p>Size: <span id="receive-file-size"></span></p>
                 <button id="download-btn" class="btn">Download</button>
-                <div id="download-progress-container" class="hidden">
-                    <progress id="download-progress" max="100" value="0"></progress>
-                    <span id="download-progress-text">0%</span>
-                </div>
             </div>
         </div>
     </div>
